--- a/basic.html
+++ b/basic.html
@@ -11,6 +11,8 @@
 </body>
 </html>
 <script>
-    let yourName = prompt("Hãy nhập tên của bạn");
-document.write("Xin chào " + yourName);
+    let Ngày = prompt("Nhập ngày");
+    let Tháng = prompt("Nhập tháng");
+    let Năm = prompt("Nhập năm");
+    document.write('Hôm nay ngày '  + Ngày +'/' + Tháng+'/' +Năm);
 </script>
